--- a/style.css
+++ b/style.css
@@ -1,8 +1,38 @@
+body{
+    background-color: line;
+}
 .btn{
-    border-radius:50%;
     text-align: center;
     font-size: 20px;
+    position: absolute;
+    right: 18px;
+    padding: 7px 16px;
+    background-color: rgb(129, 184, 145);
+    border: 0px;
+
+}
+.btn:hover {
+  background-color: rgb(129, 184, 145);
 }
 #ul{
-    text-decoration: none;
+     list-style: none;
+    /* border: 1px solid red;
+    margin-top: 3rem;  */
+}
+.todo{
+  /* border-radius: 5px; */
+  padding: 20px;
+  position: absolute;
+}
+input[type = text]{
+    width: 100%;
+    padding: 10px;
+    background-color: rgb(129, 184, 145);
+    border: 0px;
+}
+::placeholder{
+    color: white;
+}
+.strike{
+    text-decoration: line-through;
 }
