--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 body{
-    background-color: line;
+    background-image: linear-gradient(to right,rgb(159, 204, 171), rgb(245, 225, 166));
+    /* background-color: red; */
+    /* background-size: cover; */
+}
+.delete{
+    background-color:rgb(129, 184, 145);
+    border: none;
 }
 .btn{
     text-align: center;
     font-size: 20px;
     position: absolute;
-    right: 18px;
-    padding: 7px 16px;
+    right: 20px;
+    top: 82px;
+    padding: 5px 16px;
     background-color: rgb(129, 184, 145);
     border: 0px;
 
@@ -16,11 +23,18 @@ body{
 }
 #ul{
      list-style: none;
+     background-color: white;
     /* border: 1px solid red;
     margin-top: 3rem;  */
 }
+li{
+    padding: 1rem;
+    text-transform: capitalize;
+}
 .todo{
-  /* border-radius: 5px; */
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   padding: 20px;
   position: absolute;
 }
@@ -32,6 +46,8 @@ input[type = text]{
 }
 ::placeholder{
     color: white;
+    font-size: 16px;
+    font-weight: lighter;
 }
 .strike{
     text-decoration: line-through;
